# job_board_app

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/job_board_app/: manage.py
src/job_board_app/core/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
src/job_board_app/core/business_logic/: __init__.py  exceptions.py  interfaces.py
src/job_board_app/core/business_logic/dto/: __init__.py  company.py  login.py  registration.py  vacancy.py
src/job_board_app/core/business_logic/services/: __init__.py  common.py  company.py  country.py  employment_formats.py  groups.py  levels.py  login.py  registration.py  response.py  vacancy.py  work_formats.py
src/job_board_app/core/migrations/: 0001_initial.py  0002_populate_level_table.py  0003_alter_staff_range_end.py  0003_populate_language_levels_table.py  0004_alter_company_profile_staff_delete_staff.py  0004_populate_employment_format_table.py  0005_populate_language_levels_table.py  0005_populate_work_formats_table.py  0006_populate_country_table.py  0006_populate_employment_format_table.py  0007_create_default_roles.py  0007_populate_work_statuses_table.py  0008_alter_vacancy_options.py  0008_populate_work_formats_table.py  0009_add_apply_vacancy_permission_for_candidate.py  0009_vacancy_attachment.py  0010_remove_response_summary_link_and_more.py  0010_rename_name_address_street_name_and_more.py  0011_alter_country_name_alter_vacancy_attachment.py  0011_populate_responce_statuses_table.py  0012_alter_address_office_number_alter_city_name_and_more.py  0012_alter_companyprofile_address_and_more.py  0012_populate_country_table.py  0013_alter_vacancy_description_alter_vacancy_experience.py  0013_remove_company_company_profile_and_more.py  0014_rename_business_area_businessarea_and_more.py  0014_vacancy_qr_code.py  0015_rename_company_profile_companyprofile.py  0016_create_default_roles.py  __init__.py
src/job_board_app/core/models/: __init__.py  address.py  base.py  business_area.py  city.py  company.py  country.py  email_confirmation_code.py  employee.py  employment_format.py  language.py  level.py  position.py  response.py  review.py  tag.py  user.py  vacancy.py  work_format.py  work_status.py
src/job_board_app/core/presentation/: __init__.py  converters.py  middleware.py  urls.py
src/job_board_app/core/presentation/api_v1/: __init__.py  pagination.py  urls.py  validators.py
src/job_board_app/core/presentation/common/: __init__.py  converters.py  validators.py
src/job_board_app/core/presentation/forms/: __init__.py  company.py  login.py  registration.py  vacancy.py
src/job_board_app/core/presentation/templates/: add_company.html  base.html  email_changed.html  form_snippet.html  get_company.html  get_vacancy.html  index.html  login.html  nav.html  not_authorized.html  registration.html  search_form_snippet.html
src/job_board_app/core/presentation/views/: __init__.py  company.py  login.py  logout.py  registration.py  vacancy.py
src/job_board_app/core/presentation/web/: __init__.py  middleware.py  pagination.py  urls.py  validators.py
src/job_board_app/core/tests/: utils.py
src/job_board_app/core/tests/test_unit/: test_validators.py
src/job_board_app/core/tests_pytest/: conftest.py  utils.py
src/job_board_app/core/tests_pytest/mocks/: qr_adapter_mock.py
src/job_board_app/core/tests_pytest/test_integration/: test_vacancy_endpoint.py
src/job_board_app/core/tests_pytest/test_unit/: test_validators.py
src/job_board_app/job_board_app/: __init__.py  asgi.py  logger_formatter.py  settings.py  template_renders.py  urls.py  wsgi.py
src/job_board_app/templates/: add_company.html  add_vacancy.html  company_list.html  company_review.html  form_snippet.html  index.html  specific_company.html  specific_vacancy.html  user_profile.html
(+32 files in other folders)
