[tool.poetry]
name = "job-board-app"
version = "0.1.0"
description = ""
authors = ["Aliaksei Kastsiuchonak <kostkost30@gmail.com>"]
readme = "README.md"
packages = [{include = "job_board_app"}]

[tool.poetry.dependencies]
python = "3.11"
django = "4.2.2"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.12.0"
flake8 = "6.0.0"
flake8-builtins = "2.1.0"
pep8-naming = "0.13.3"
flake8-comments = "0.1.2"
pre-commit = "3.3.3"
mypy = "1.3.0"
black = "23.3.0"
isort = "5.12.0"
pylint = "2.17.4"

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
import-outside-toplevel
"""

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"