[tool.poetry]
name = "job-board-app"
version = "0.1.0"
description = ""
authors = ["Aliaksei Kastsiuchonak <kostkost30@gmail.com>"]
readme = "README.md"
packages = [{include = "job_board_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.3"
python-dotenv = "1.0.0"
dacite = "1.8.1"
pillow = "^10.0.0"
djangorestframework = "3.14.0"
markdown = "3.4.4"
django-filter = "23.2"
redis = "^5.0.1"
hiredis = "^2.2.3"
drf-yasg = "1.21.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"
psycopg2-binary = "2.9.6"

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true
line-length = 120
include_trailing_comma = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
import-outside-toplevel,
too-many-instance-attributes,
no-member,
too-few-public-methods
"""

[tool.pylint.MASTER]
ignore-paths = [ "^src/job_board_app/core/migrations/.*$"]

[tool.isort]
profile = "black"
line_length=120
include_trailing_comma = true

[tool.deptry]
ignore = ['DEP001']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"